[package]
name = "sharejournal"
description = "app to record when shares were bought and at what prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.11"
rusqlite = { version = "0.29.0", features = ["bundled"] }
color-eyre = "0.6"
