[package]
name = "sharejournal"
description = "app to record when shares were bought and at what prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
chrono = "0.4"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
